--- a/little-triangle.css
+++ b/little-triangle.css
@@ -3,6 +3,7 @@
     height: 100px;
     background: #eee;
 }
+/* NO.1 */
 .little-triangle::before{
     border: solid transparent;
     border-width: 10px;
@@ -14,14 +15,15 @@
     height: 0;
     position: absolute;
 }
+/* NO.2 */
 .little-triangle::after{
-    border: solid transparent;
-    border-width: 9px;
-    border-left-color: #22aa3f;
-    /* right: -26px; */
-    /* top: 61%; */
-    content: ' ';
+    position: absolute;
+    content: "";
+    background: transparent;
     width: 0;
     height: 0;
-    position: absolute;
+    border-left: 8px solid transparent;
+    border-right: 8px solid transparent;
+    border-bottom: 10px solid rgb(33, 182, 90);
+    /* left: 40%; */
 }
